<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maliput_object_py</name>
  <version>1.0.0</version>
  <description>Maliput Object bindings</description>
  <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
  <license file="../LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_doxygen</build_depend>
  <build_depend>python3</build_depend>
  <build_depend>python-pylint3</build_depend>
  <build_depend>python3-pycodestyle</build_depend>

  <depend>maliput_object</depend>
  <depend>pybind11</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
